image address changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <div class="brand">
-            <img src="./flipkart/assets/flipkart_logo.svg" alt="" srcset="">
+            <img src="./assets/flipkart_logo.svg" alt="" srcset="">
         </div>
         <div class="searchBar">
           <i class="bx bx-search" for="search"></i>
