--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class='bx bx-store'></i>
         </div>
         <div class="dots">
-          <span></span>
+          <input type="checkbox" class="dropdown"/>
         </div>
       </nav>
     </header>
