--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class='bx bx-store'></i>
         </div>
         <div class="dots">
-          <input type="checkbox" class="dropdown"/>
+          <input type="checkbox" class="dropdown" title="checkbox">
         </div>
       </nav>
     </header>
