--- a/index.html
+++ b/index.html
@@ -8,31 +8,59 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <nav>
         <div class="brand">
-            <img src="./assets/flipkart_logo.svg" alt="" srcset="">
+          <img src="./assets/flipkart_logo.svg" alt="" srcset="" />
         </div>
         <div class="searchBar">
           <i class="bx bx-search" for="search"></i>
-          <input type="search" id="search" placeholder="Search for Products, Brands and More..."/>
+          <input
+            type="search"
+            id="search"
+            placeholder="Search for Products, Brands and More..."
+          />
         </div>
         <div class="login">
-            <i class='bx bx-user-circle'></i>
-            <span class="text">Login</span>
-            <i class='bx bx-chevron-left'></i>
+          <i class="bx bx-user-circle"></i>
+          <span class="text">Login</span>
+          <i class="bx bx-chevron-left"></i>
         </div>
         <div class="cart">
-            <i class='bx bx-cart-add'></i>
+          <i class="bx bx-cart-add"></i>
         </div>
         <div class="store">
-            <i class='bx bx-store'></i>
+          <i class="bx bx-store"></i>
         </div>
         <div class="dots">
-          <input type="checkbox" class="dropdown" title="checkbox">
+          <input type="checkbox" class="dropdown" title="checkbox" />
+          <ul class="drop-item">
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-bell"></i>
+                <span>Notification preferences</span>
+              </a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-headphone"></i>
+                <span>24*7 Customer care</span></a
+              >
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-download"></i>
+                <span>Adevertise</span></a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-download"></i>
+                <span>Download App</span></a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
