--- a/index.html
+++ b/index.html
@@ -27,7 +27,48 @@
         <div class="login">
           <i class="bx bx-user-circle"></i>
           <span class="text">Login</span>
-          <i class="bx bx-chevron-left"></i>
+          <i class="bx bx-chevron-down"></i>
+          <ul class="drop-item">
+            <li>
+              <a href="#">
+                <span>New Customer?</span>
+                <span>Sign Up</span>
+              </a>
+            </li>
+            <hr>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-user-circle"></i>
+                <span>My Profile</span>
+              </a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-headphone"></i>
+                <span>Flipkart Plus Zone</span></a
+              >
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class="bx bx-download"></i>
+                <span>Orders</span></a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class='bx bx-heart'></i>
+                <span>Wishlist</span></a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class='bx bx-gift'></i>
+                <span>Reward</span></a>
+            </li>
+            <li class="links">
+              <a href="#">
+                <i class='bx bxs-credit-card'></i>
+                <span>Gift Card</span></a>
+            </li>
+          </ul>
         </div>
         <div class="cart">
           <i class="bx bx-cart-add"></i>
@@ -52,7 +93,7 @@
             </li>
             <li class="links">
               <a href="#">
-                <i class="bx bx-download"></i>
+                <i class='bx bx-line-chart'></i>
                 <span>Adevertise</span></a>
             </li>
             <li class="links">
